RESOLVED FIXED304347
REGRESSION(293848@main): In certain circumstances, -webkit-box-shadow (and perhaps other prefixed and/or cascade-alias properties) does not transition
https://bugs.webkit.org/show_bug.cgi?id=304347
Summary REGRESSION(293848@main): In certain circumstances, -webkit-box-shadow (and pe...
Sam Weinig
Reported 2025-12-17 11:48:21 PST
Created attachment 477769 [details] Transition using box-shadow (works) I am not sure exactly what the requirements are, but in some circumstances, using `-webkit-box-shadow` rather than `box-shadow` will cause a CSS transition not to occur. See two attached test cases. In the one called "Transition using box-shadow (works)", you will see that the transition happens, and there is a visible box shadow. In the one called "Transition using -webkit-box-shadow (broken)", you will see that the transition does not happen, and there is no visible box shadow.
Attachments
Transition using box-shadow (works) (1.37 KB, text/html)
2025-12-17 11:48 PST, Sam Weinig
no flags
Transition using -webkit-box-shadow (broken) (1.38 KB, text/html)
2025-12-17 11:48 PST, Sam Weinig
no flags
Sam Weinig
Comment 1 2025-12-17 11:48:55 PST
Created attachment 477770 [details] Transition using -webkit-box-shadow (broken)
Antoine Quint
Comment 2 2025-12-17 12:13:33 PST
With both tests I see two transitions being started in Safari (one for -webkit-box-shadow, one for box-shadow), whereas Chrome and Firefox only start one (for box-shadow). I'm not seeing what you're seeing. What version of Safari did you test with?
Antoine Quint
Comment 3 2025-12-18 01:03:27 PST
I don't know whether a spec dictates the behavior for aliases here, but it would be nice to align with Chrome and Firefox here and codify this in WPT.
Sam Weinig
Comment 4 2025-12-18 08:42:19 PST
Interesting! I was testing with Safari Version 26.1 (21622.2.11.11.9). I will try ToT.
Radar WebKit Bug Importer
Comment 5 2025-12-24 11:49:13 PST
Antoine Quint
Comment 6 2026-01-11 12:35:37 PST
Hmm, now I see the issue with the "broken" test with STP 234 and 305425@main, trying to identify when this regressed compared to what we shipped in macOS Sequoia 15.6.1 (24G90). My first regression range is 289651@main297306@main, will get a more specific regression point tomorrow.
Antoine Quint
Comment 7 2026-01-11 13:18:36 PST
This broke in 293848@main, the fix for bug 285900.
Antoine Quint
Comment 8 2026-01-12 02:52:23 PST
The behavior where two transitions were yielded when `transition-property: all` was used and a property with an alias changed was modified in 304641@main and it now matches Chrome and Firefox where a single transition occurs. Very nice.
Antti Koivisto
Comment 9 2026-01-15 10:34:53 PST
EWS
Comment 10 2026-01-15 11:44:46 PST
Committed 305660@main (288510351274): <https://commits.webkit.org/305660@main> Reviewed commits have been landed. Closing PR #56649 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.