Cherry-pick 288510351274. rdar://169012131

REGRESSION(293848@main): In certain circumstances, -webkit-box-shadow (and perhaps other prefixed and/or cascade-alias properties) does not transition
    https://bugs.webkit.org/show_bug.cgi?id=304347
    rdar://167144768

    Reviewed by Alan Baradlay.

    Cascade aliases like -webkit-box-shadow did not work correctly with inline match result cache.

    Test: fast/animation/webkit-box-shadow-inline-style-cache.html
    * LayoutTests/fast/animation/webkit-box-shadow-inline-style-cache-expected.txt: Added.
    * LayoutTests/fast/animation/webkit-box-shadow-inline-style-cache.html: Added.
    * Source/WebCore/style/MatchResultCache.cpp:

    We need to resolve cascade alias properties in IncludedProperties.

    (WebCore::Style::MatchResultCache::computeAndUpdateChangedProperties):
    * Source/WebCore/style/PropertyCascade.h:

    Canonical link: https://commits.webkit.org/305660@main

Identifier: 305413.177@safari-7624-branch